update fonts and img links

--- a/index.html
+++ b/index.html
@@ -289,7 +289,10 @@
                 </div>
               </div>
               <div class="product__price price">
-                <span class="price__total" data-price="10500.24">
+                <span
+                  class="price__total price__total--long"
+                  data-price="10500.24"
+                >
                   2 100 047
                   <span class="price__total-currency">сом</span>
                 </span>
