--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       sizes="32x32"
       href="https://www.wildberries.ru/favicon.ico"
     />
-    <link rel="preload" href="./fonts/SegoeUI.woff2" as="font" />
+    <link rel="preload" href="/fonts/SegoeUI.woff2" as="font" />
     <title>Товары и точка</title>
   </head>
   <body>
