fix bug and transfer js files

--- a/index.html
+++ b/index.html
@@ -904,7 +904,7 @@
       </div>
     </section>
 
-    <section class="modal-develop modal">
+    <section class="modal-delivery modal">
       <div class="modal__container">
         <div class="modal__header">
           <h3 class="modal__title">Способ доставки</h3>
