improve form validation

--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
               />
               <span class="form__field-name gray-text">Телефон</span>
             </label>
-            <label class="form__label">
+            <label class="form__label form__label--inn">
               <span class="form__field-extra-text">
                 Для таможенного оформления
               </span>
